--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/deepakdvd/event-coming-soon.git"
   },
-  "author": "",
+  "dependencies" :{
+"express":"4.15.2",
+"http":"0.0.0",
+"nodemailer":"3.1.5",
+"body-parser":"1.17.1",
+"ejs":"2.5.6"
+},
+
+  "author": "deepak",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/deepakdvd/event-coming-soon/issues"
+  "engines": {
+    "node": "6.11.3",
+    "npm":"3.10.10"
   },
   "homepage": "https://github.com/deepakdvd/event-coming-soon#readme",
   "dependencies": {
