--- a/package.json
+++ b/package.json
@@ -11,12 +11,44 @@
     "url": "git+https://github.com/deepakdvd/event-coming-soon.git"
   },
   "dependencies" :{
-"express":"4.15.2",
-"http":"0.0.0",
-"nodemailer":"3.1.5",
-"body-parser":"1.17.1",
-"ejs":"2.5.6"
-},
+    "express":"4.15.2",
+    "http":"0.0.0",
+    "nodemailer":"3.1.5",
+    "body-parser":"1.17.1",
+    "ejs":"2.5.6"
+  },
+  "devDependencies": {
+    "accepts": "1.3.4",
+    "array-flatten":"1.1.1",
+    "content-disposition": "0.5.2",
+     "cookie":"0.3.1",
+        "cookie-signature":"1.0.6",
+        "destroy":"1.0.4",
+        "ejs":"2.5.7",
+        "encodeurl":"1.0.1",
+        "escape-html":"1.0.3",
+        "etag":"1.8.1",
+        "express":"4.16.2",
+        "finalhandler":"1.1.0",
+        "forwarded":"0.1.2",
+        "fresh":"0.5.2",
+        "ipaddr.js":"1.5.2",
+        "merge-descriptors":"1.0.1",
+        "methods":"1.1.2",
+        "negotiator":"0.6.1",
+        "nodemailer":"4.4.1",
+        "parseurl":"1.3.2",
+        "path-to-regexp":"0.1.7",
+        "proxy-addr":"2.0.2",
+        "range-parser":"1.2.0",
+        "safe-buffer":"5.1.1",
+        "send":"0.16.1",
+        "serve-static":"1.13.1",
+        "setprototypeof":"1.1.0",
+        "utils-merge":"1.0.1",
+        "vary":"1.1.2",
+        "mime":"1.4.1"
+  },
 
   "author": "deepak",
   "license": "ISC",
